[package]
name = "pzmacro"
version = "0.5.0"
edition = "2021"
description = "general macro; demo: https://github.com/FaceWaller/pzmacro"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.13", features = ["parsing", "extra-traits","full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0.30"